--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "devDependencies": {
     "@matterlabs/hardhat-zksync-solc": "^1.1.14",
     "@matterlabs/hardhat-zksync-verify": "^1.7.1",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@types/sinon-chai": "^3.2.12",
+    "ethereum-waffle": "^4.0.10",
     "hardhat": "^2.19.1"
   },
   "dependencies": {
